[package]
name = "nolimittexasholdem-server"
version = "0.1.0"
edition = "2021"
authors = ["Mikail Gedik", "Thomas Herzog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
rand = "*"
itertools = "*"
async-std = { version = "*", features = ["unstable"] }
clap = { version = "4.2.7", features = ["cargo"] }